Broke everything to fix again

--- a/Index.html
+++ b/Index.html
@@ -1,143 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
-    </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfu6GzIuASRBlIxT7IjczQYtlsoC_4uzo">
-    </script>
-    <script type="text/javascript">
-    //****declare map variable for global scope
-      var directionsDisplay;
-      var directionsService = new google.maps.DirectionsService();
-      var map;
-      var markMe = null;
-      //coordinates on house to be passed as parameter in the marker
-        var homeCoords = new google.maps.LatLng(38.9758939, -94.48257899999999);
-      function initialize() {
-        //set up directions renderer
-        directionsDisplay = new google.maps.DirectionsRenderer();
-        //settings for the map to be rendered************
-        var mapOptions = {
-          //center: new google.maps.LatLng(38.9758939, -94.48257899999999),
-          zoom: 11,
-          center: homeCoords
-        };
-        //****set map variable to be the new google map to be rendered****
-        map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-        //set marker to track fixed destinations
-        var marker = new google.maps.Marker({
-          //pass in coordinates variable for fixed position on map
-          position: homeCoords,
-          //declare the map to put the marker in
-          map: map,
-          title: "That's my house!"
-        });
-        //if browser has permission to track location
-        if(navigator.geolocation){
-          //get current position once, pass in current position
-          navigator.geolocation.getCurrentPosition(function(position){
-            // create coordinate varibale to pass in based on current position coordinates
-            var positron = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-            //place an infoWindow at current position on map
-            /*var infowindow = new google.maps.InfoWindow({
-              map: map,
-              position: positron,
-              content: 'You have been spotted!'
-            });*/
-            //center the map on current position
-            //map.setCenter(positron);
-            directionsDisplay.setMap(map);
-          }, function(){ 
-            //callback error function
-            handleNoGeolocation(true);
-          });
-        } else{
-          //if browser has no access to location
-          handleNoGeolocation(false);
-        }
-      }
-
-      function watchMe(){
-        var watchSuccess = function(pos){
-          //set marker image here
-          //set new google latlng
-          var moveMe = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
-          if(!markMe){
-            markMe = new google.maps.Marker({
-              position: moveMe,
-              map: map
-            });
-            console.log('Working...');
-          } else{
-            markMe.setPosition(moveMe);
-            console.log('Still working...');
-          }
-          calcRoute(moveMe, homeCoords);
-        };
-        var watchError = function(err){
-          console.log('And... broken!');
-        };
-        var watchOptions = {
-          enableHighAccuracy: false,
-          timeout: 5000,
-          maximumAge: 0
-        };
-        var watchPos = navigator.geolocation.watchPosition(watchSuccess, watchError, watchOptions);
-      }
-      //function for geolocation issues
-      function handleNoGeolocation(errorFlag){
-        if(errorFlag){
-          //gelocations isn't working
-          var content = 'Error: Geodude is still a-sleeping.'
-        } else {
-          //if access to geolocations isn't granted to browser
-          var content = 'Error: You hate Geodude.'
-        }
-        //pass default coordinates to map if no location permission is granted
-        var options = {
-          map: map,
-          position: new google.maps.LatLng(38.9758939, -94.48257899999999),
-          content: content
-        }
-        //default InfoWindow
-        var infowindow = new google.maps.InfoWindow(options);
-        map.setCenter(options.position);
-      }
-
-      //next step - Directions API
-      //https://developers.google.com/maps/documentation/javascript/directions
-      //Travel Modes - Walking, Driving
-      function calcRoute(currentcoords, destination){
-        //var start = document.getElementById("start").value;
-        var start = currentcoords;
-        //var end = document.getElementById("end").value;
-        var end = homeCoords;
-
-        var request = {
-          origin: start, 
-          destination: end,
-          travelMode: google.maps.TravelMode.DRIVING
-        };
-        directionsService.route(request, function(result, status) {
-          if(status == google.maps.DirectionsStatus.OK) {
-            directionsDisplay.setDirections(result);
-          }
-        });
-      }
-      
-
-      //Here is where we actually do things
-      //initialize the map and fixed points
-      google.maps.event.addDomListener(window, 'load', initialize);
-      //watch the current position
-      google.maps.event.addDomListener(window, 'load', watchMe);
-    </script>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
+    <link url="app/css/app.css"/>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfu6GzIuASRBlIxT7IjczQYtlsoC_4uzo"></script>
+    <script type="text/javascript" src="app/js/libs/requirejs/require.js"></script>
+    <script type="text/javascript" src="app/js/main.js"></script>
+    <script type="text/javascript" src="app/js/libs/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="app/js/libs/underscore/underscore.js"></script>
+    <script type="text/javascript" src="app/js/libs/json2/json2.js"></script>
+    <script type="text/javascript" src="app/js/libs/marionette/lib/core/backbone.marionette.js"></script>
+    <script type="text/javascript" src="app/js/libs/backbone/backbone.js"></script>
+    <script type="text/javascript" src="app/js/RouteViews/FirstRoute.js"></script>
   </head>
   <body>
     <div id="map-canvas"/>
