--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,10 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="css/app.css" />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfu6GzIuASRBlIxT7IjczQYtlsoC_4uzo"></script>
 </head>
 <body>
-
+ <div id="map-canvas"/>
 </body>
 <script data-main="js/main" src="js/libs/requirejs/require.js"></script>
 </html>
