added some jQuery to the directions panel

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,11 @@
     <div class="fullScreen">
       <div id="map-canvas"></div>
       <div id="panel"></div>
-      <a class="foundIt">Found it!</a>
+      <div id="buttonContainer">
+        <a id="directions" class="buttons directions">Directions</a>
+        <a id="hideDirections" class="buttons directions hidden">Hide</a>
+        <a id="foundIt" class="buttons">Found it!</a>
+      </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="scripts/moveabletype.js"></script>
