changed the logic to stop the dynamically changing routes. Added a  "parked" button

--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,12 @@
       <div id="buttonContainer">
         <a id="directions" class="buttons directions">Directions</a>
         <a id="hideDirections" class="buttons directions hidden">Hide</a>
-        <a id="foundIt" class="buttons">Found it!</a>
+        <a id="parkedIt" class="buttons finder">Found it!</a>
+        <a id="foundIt" class="buttons finder hidden">Found it!</a>
       </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="scripts/collection.js"></script>
     <script type="text/javascript" src="scripts/moveabletype.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
     <link type="text/css" rel="stylesheet" href="css/main.css"/>
