oops button and some styles

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <div id="buttonContainer">
       <a id="directions" class="buttons directions"><div class="tripleMenu"></div></a>
       <a id="hideDirections" class="buttons directions hidden"><div class="icon">&#xf00d;</div></a>
+      <a id="oops" class="buttons hidden"><div class="buttonText">oops!</div></a>
       <a id="parkedIt" class="buttons finder"><div class="icon">&#xf183;</div></a>
       <a id="foundIt" class="buttons finder hidden"><div class="icon">&#xf00c;</div></a>
     </div>
