last one, overlays populated

--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,14 @@
     <div id="map-container">
       <div id="map-canvas"></div>
       <div id="panel"></div>
-      <div id="personalPanel"></div>
+      <div id="personalPanel" class="awesome">
     </div>
     
     <div id="buttonContainer">
       <a id="showDirections" class="buttons directions"><div class="tripleMenu"></div></a>
       <a id="hideDirections" class="buttons directions hidden"><div class="icon">&#xf00d;</div></a>
       
-      <a id="showTextDetails" class="buttons details glow"><div class="icon">&#xf1ea;</div></a>
+      <a id="showTextDetails" class="buttons details"><div class="icon">&#xf1ea;</div></a>
       <a id="hideTextDetails" class="buttons details hidden"><div class="icon">&#xf1ea;</div></a>
 
       <a id="oops" class="buttons hidden oops"><div class="buttonText">oops!</div></a>
